src/objects/Campaign_Lead__c.object
<CustomObject>
    <description>Lead: To link campaign and lead</description>
    <fields>
        <fullName>Campaign_Notes__c</fullName>
        <label>Campaign Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Title__c</fullName>
        <label>Campaign Title</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Leads</relationshipLabel>
        <relationshipName>Campaign_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Central_Campaign_Name__c</fullName>
        <formula>Campaign__r.Parent.Parent.Name</formula>
        <label>Central Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Lead_Account_Id__c</fullName>
        <formula>IF( Lead_Account_Id__c &lt;&gt; &apos;&apos;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check  Lead Account Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account, Person Account Manual Merge, Person Account Retail, Person Account Soft Deleted</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Leads</relationshipLabel>
        <relationshipName>Campaign_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstTimeImported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First-Time Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>Lead__r.Is_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Call__c</fullName>
        <label>Last Successful Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Account_Id__c</fullName>
        <description>/* 
Created by: Mouse Liu 
Used by: Lead__c (US-Lead-15) 
Function: Supplement field used in UtilCampaignLead.cls
Used in: UtilCampaignLead.cls

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <formula>Lead__r.Contact__c</formula>
        <label>*Lead Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_DataSource__c</fullName>
        <label>Lead DataSource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>3rd party data</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Web/Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>BBAC</fullName>
                </value>
                <value>
                    <fullName>OB Call</fullName>
                </value>
                <value>
                    <fullName>IB Call</fullName>
                </value>
                <value>
                    <fullName>Dealers</fullName>
                </value>
                <value>
                    <fullName>MB Magazine</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz financial</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz driving Academy</fullName>
                </value>
                <value>
                    <fullName>Media advertisement</fullName>
                </value>
                <value>
                    <fullName>Friends recommend</fullName>
                </value>
                <value>
                    <fullName>Social media</fullName>
                </value>
                <value>
                    <fullName>Searching engine</fullName>
                </value>
                <value>
                    <fullName>MB website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_DataSubSource__c</fullName>
        <label>Lead DataSubSource</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_DataSource__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Air China</fullName>
                </value>
                <value>
                    <fullName>Jingdong mall</fullName>
                </value>
                <value>
                    <fullName>Taobao station</fullName>
                </value>
                <value>
                    <fullName>Cooperation media</fullName>
                </value>
                <value>
                    <fullName>China telecom / 189 mailbox</fullName>
                </value>
                <value>
                    <fullName>Dunhill</fullName>
                </value>
                <value>
                    <fullName>D&amp;G</fullName>
                </value>
                <value>
                    <fullName>HUGO BOSS</fullName>
                </value>
                <value>
                    <fullName>Bank of communications</fullName>
                </value>
                <value>
                    <fullName>TNT</fullName>
                </value>
                <value>
                    <fullName>Axciom</fullName>
                </value>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>Auto Show</fullName>
                </value>
                <value>
                    <fullName>Other Event</fullName>
                </value>
                <value>
                    <fullName>Mercedes - Benz interactive community</fullName>
                </value>
                <value>
                    <fullName>ML web special</fullName>
                </value>
                <value>
                    <fullName>B web special</fullName>
                </value>
                <value>
                    <fullName>Sina Blog</fullName>
                </value>
                <value>
                    <fullName>smart official website</fullName>
                </value>
                <value>
                    <fullName>Bitauto</fullName>
                </value>
                <value>
                    <fullName>E web special</fullName>
                </value>
                <value>
                    <fullName>Pcauto</fullName>
                </value>
                <value>
                    <fullName>Baidu</fullName>
                </value>
                <value>
                    <fullName>GLK web special</fullName>
                </value>
                <value>
                    <fullName>Interaction through</fullName>
                </value>
                <value>
                    <fullName>SoHu</fullName>
                </value>
                <value>
                    <fullName>SNS</fullName>
                </value>
                <value>
                    <fullName>Mercedes - Benz website _ pre-sale</fullName>
                </value>
                <value>
                    <fullName>Mercedes - Benz _ contact us _ test drive</fullName>
                </value>
                <value>
                    <fullName>Mercedes - Benz _ contact us _ star gruppo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_InfoSourceSub__c</fullName>
        <label>Lead InfoSourceSub</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_InfoSource__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Air China</fullName>
                </value>
                <value>
                    <fullName>Artron</fullName>
                </value>
                <value>
                    <fullName>Third Party (Partner) Mail_Minsheng Bank</fullName>
                </value>
                <value>
                    <fullName>Third Party (Partner) Mail _Bank of Communication</fullName>
                </value>
                <value>
                    <fullName>Auto Show</fullName>
                </value>
                <value>
                    <fullName>Other Event</fullName>
                </value>
                <value>
                    <fullName>MB official website</fullName>
                </value>
                <value>
                    <fullName>ML web special</fullName>
                </value>
                <value>
                    <fullName>B web special</fullName>
                </value>
                <value>
                    <fullName>Sina Blog</fullName>
                </value>
                <value>
                    <fullName>smart official website</fullName>
                </value>
                <value>
                    <fullName>Chinese radio network</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone Web</fullName>
                </value>
                <value>
                    <fullName>Other Web, Community, Blog</fullName>
                </value>
                <value>
                    <fullName>smart community</fullName>
                </value>
                <value>
                    <fullName>China Telecom/189 email</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz E-newsletter</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz E-brochure and price list</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Telephone Contact</fullName>
                </value>
                <value>
                    <fullName>Dealer telephone contact</fullName>
                </value>
                <value>
                    <fullName>Third Party Telephone Contact</fullName>
                </value>
                <value>
                    <fullName>Products range cards</fullName>
                </value>
                <value>
                    <fullName>Brochure &amp; Price List</fullName>
                </value>
                <value>
                    <fullName>Other Mail</fullName>
                </value>
                <value>
                    <fullName>Dealer message contact</fullName>
                </value>
                <value>
                    <fullName>Third Party Message Contact</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Message Contact</fullName>
                </value>
                <value>
                    <fullName>Dealer Show Room</fullName>
                </value>
                <value>
                    <fullName>Friend Recommendation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_InfoSource__c</fullName>
        <label>Lead InfoSource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Web/Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Outdoor Advertising</fullName>
                </value>
                <value>
                    <fullName>Newspaper/Magazine</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>TV Advertising</fullName>
                </value>
                <value>
                    <fullName>Telephone Contact</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>Dealer Exhibition Hall</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online Registration</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Data marketing</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>MB Magazine</fullName>
                </value>
                <value>
                    <fullName>Partnership Event</fullName>
                </value>
                <value>
                    <fullName>Autoshow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>Campaign Leads</relationshipLabel>
        <relationshipName>Campaign_Leads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,&apos;NA&apos;))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participate_Status__c</fullName>
        <formula>IF(Participate__c==True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participate Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_Call_Successful__c</fullName>
        <formula>Lead__r.R_IsAssigned__c -
IF(AND(ISPICKVAL( Lead__r.CAC_Lead_Status__c , &quot;Lost&quot;) 
, Lead__r.Successful_Call_Number__c=1),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Successful</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Converted_Leads_Auto_Show__c</fullName>
        <formula>IF(AND(ISPICKVAL( Lead__r.Lead_DataSubSource__c , &quot;Auto Show&quot;)
        , ISPICKVAL(Lead__r.CAC_Lead_Status__c, &quot;Purchased(Only Non BDC)&quot;)
        , Lead__r.Successful_Call_Number__c&gt;1),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Leads  Auto Show</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Converted_Leads_Non_Auto_Show__c</fullName>
        <formula>IF(AND(ISPICKVAL( Lead__r.CAC_Lead_Status__c , &quot;Purchased(Only Non BDC)&quot;)
        , Lead__r.Successful_Call_Number__c&gt;=1),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Leads Non Auto Show</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Generate_Leads_Volume__c</fullName>
        <formula>IF(OR(ISPICKVAL(Lead_DataSource__c,&apos;IB Call&apos;),ISPICKVAL(Lead_DataSource__c,&apos;OB Call&apos;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Leads Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_SuccessfulCall__c</fullName>
        <formula>IF(ISBLANK( Contact__r.Last_Successful_Call__c )==true,0,1)</formula>
        <label>SuccessfulCall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Task_Genereated_Amount__c</fullName>
        <formula>IF(Task_Generated__c==true,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Genereated Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_isCampaingLead__c</fullName>
        <formula>IF(Name&lt;&gt;&apos;&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isCampaingLead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegistrationDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Campaign</label>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Campaign Leads</relationshipLabel>
        <relationshipName>Campaign_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Successful_Call_Number__c</fullName>
        <label>Successful Call Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark whether has generated the task for the campaign lead.</description>
        <label>Task Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Campaign Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Lead__c</columns>
        <columns>Task_Generated__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Campaign Lead No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Campaign_lead_validation_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT( ISPICKVAL(CreatedBy.User_Type__c,&quot;Dealer&quot;))&amp;&amp; ISCHANGED(Campaign__c) &amp;&amp; ISPICKVAL($User.User_Type__c,&quot;Dealer&quot;),MD__c = &apos;JP&apos;,$Profile.Name != &apos;IntegrationAPI&apos;)</errorConditionFormula>
        <errorMessage>Cannot change associated Campaign if this was created by wholesale</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Can_Not_Change_Registration_Date</fullName>
        <active>true</active>
        <description>You can NOT change the registration date of lead after enter first time.</description>
        <errorConditionFormula>ISCHANGED(RegistrationDate__c) &amp;&amp; PRIORVALUE(RegistrationDate__c) != null</errorConditionFormula>
        <errorDisplayField>RegistrationDate__c</errorDisplayField>
        <errorMessage>You can not change Registration Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_Not_Select_CAC_Campaign</fullName>
        <active>true</active>
        <errorConditionFormula>Campaign__r.RecordType.Id = &apos;01290000000rXlr&apos;</errorConditionFormula>
        <errorDisplayField>Campaign__c</errorDisplayField>
        <errorMessage>This Field can not be selected CAC Campaign Level.</errorMessage>
    </validationRules>
</CustomObject>